--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://maps.app.goo.gl/UyDfaxvcJ7sk9nme8">
     <title>Redirecting...</title>
+    <script type="text/javascript">
+        window.location.href = "https://maps.app.goo.gl/UyDfaxvcJ7sk9nme8";
+    </script>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://maps.app.goo.gl/UyDfaxvcJ7sk9nme8">click here</a>.</p>
 </body>
 </html>
