--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url=https://maps.app.goo.gl/UyDfaxvcJ7sk9nme8">
     <script type="text/javascript">
         window.location.href = "https://maps.app.goo.gl/UyDfaxvcJ7sk9nme8";
     </script>
 </head>
 <body>
+    <!-- This part will not be visible -->
 </body>
 </html>
